# GWUtils

./: README.md  pyproject.toml
src/GWUtils/: define.py  models_gw.py  plot_utils.py  query_utils.py
tests/: test_GWEvent.py  test_queries.py
